--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>Lotecaria - Simulador de Loteria</title>
 </head>
 <body>
-    <h1>Lotecaria</h1>
-    <h3>Simulador de Loteria</h3>
+    <header>
+        <h1>Lotecaria</h1>
+        <h3>Simulador de Loteria</h3>
+    </header>
+
+    <div class="numeros">
+        <input type="number" id="num1">
+        <input type="number" id="num2">
+        <input type="number" id="num3">
+        <input type="number" id="num4">
+        <input type="number" id="num5">
+        <input type="number" id="num6">
+    </div>
+
+    <div class="sorteio">
+        <button class="btnsort" >Sortear</button>
+        <p id="numsort"></p>
+    </div>
+
+    <div class="vericacao">
+        <p>Total de acertos foi: <span id="total"></span> </p>
+    </div>
+
 </body>
 </html>
