criando as função importantes

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     </header>
 
     <div class="numeros">
-        <input type="number" id="num1">
-        <input type="number" id="num2">
-        <input type="number" id="num3">
-        <input type="number" id="num4">
-        <input type="number" id="num5">
-        <input type="number" id="num6">
+        <input type="number" id="num1" onchange="getNum(value,1)">
+        <input type="number" id="num2" onchange="getNum(value,2)">
+        <input type="number" id="num3" onchange="getNum(value,3)">
+        <input type="number" id="num4" onchange="getNum(value,4)">
+        <input type="number" id="num5" onchange="getNum(value,5)">
+        <input type="number" id="num6" onchange="getNum(value,6)">
     </div>
 
     <div class="sorteio">
-        <button class="btnsort" >Sortear</button>
+        <button class="btnsort" onclick="sorteioNum()" >Sortear</button>
         <p id="numsort"></p>
     </div>
 
     <div class="vericacao">
         <p>Total de acertos foi: <span id="total"></span> </p>
     </div>
-
+    <script src="funcoes.js"></script>
 </body>
 </html>
