--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.json">
 
     <script>navigator.serviceWorker.register("sw.js")</script> 
-    <script>navigator.serviceWorker.register("sw.js")</script> 
+    <script>navigator.serviceWorker.register("sw.js.map")</script> 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
